libraries/ckit/regression/valid-programs/a27.c
void *y;
void *x;

void *y = &x;

void *x = &y;

main() {
 1;
}
